--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "eslint:fix": "npm run eslint -- --fix",
     "pretest": "npm run rebuild",
     "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
+    "unit-test": "mocha --timeout 0 --exit src/__tests__/acceptance/ingredients-unit-test.js",
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "docker:build": "docker build -t menumaker .",
-    "docker:run": "docker run -p 3000:3000 -d menumaker",
+    "docker:run": "docker run -p 3000:3001 -d menumaker",
     "premigrate": "npm run build",
     "migrate": "node ./dist/migrate",
     "preopenapi-spec": "npm run build",
@@ -61,11 +62,19 @@
   "devDependencies": {
     "@loopback/build": "^6.4.0",
     "@loopback/eslint-config": "^10.2.0",
-    "@loopback/testlab": "^3.4.0",
+    "@loopback/testlab": "^3.4.1",
     "@types/node": "^10.17.59",
+    "chai": "^4.3.4",
+    "chai-sinon": "^2.8.1",
+    "driven-swagger-test": "^1.2.1",
     "eslint": "^7.25.0",
+    "mocha": "^9.0.1",
     "nodemon": "^2.0.7",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0",
+    "sinon-express-mock": "^2.2.1",
     "source-map-support": "^0.5.19",
+    "supertest": "^6.1.3",
     "typescript": "~4.2.4"
   }
 }
